Add the Solar Systems in repository

--- a/index.html
+++ b/index.html
@@ -9,4 +9,9 @@
 
   <h1> The Solar System</h1>
 
-  
+  <nav>Stars</nav>
+  <nav>Terrestrial Planets</nav>
+  <nav>Gas Giants</nav>
+  <nav>Dwarf Planets</nav>
+  <nav>Asteroids</nav>
+  <nav>Comets</nav>
