Add links to list

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <h1> The Solar System</h1>
 
-  <nav>Stars</nav>
-  <nav>Terrestrial Planets</nav>
-  <nav>Gas Giants</nav>
-  <nav>Dwarf Planets</nav>
-  <nav>Asteroids</nav>
-  <nav>Comets</nav>
+  <a href="https://github.com">Stars</a>
+<a href="https://github.com">Terrestrial Planets</a>
+  <a href="https://github.com">Gas Giants</a>
+<a href="https://github.com">Dwarf Planets</a>
+<a href="https://github.com">Asteroids</a>
+<a href="https://github.com">Comets</a>
