Fix content in unordered list

--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
 </body>
   <h1> The Solar System</h1>
 
-  <ul>
-    <li><a href="https://github.com">Stars</a></li>
-    <li><a href="https://github.com">Terrestrial planets</a></li>
-    <li><a href="https://github.com">Gas giants</a></li>
-    <li><a href="https://github.com">Dwarf planets</a></li>
-    <li><a href="https://github.com">Asteroids</a></li>
-    <li><a href="https://github.com">Comets</a></li>
-  </ul>
+<header>
+  <nav>
+    <ul>
+      <li><a href="#">Stars</a></li>
+      <li><a href="#">Terrestrial planets</a></li>
+      <li><a href="#">Gas giants</a></li>
+      <li><a href="#">Dwarf planets</a></li>
+      <li><a href="#">Asteroids</a></li>
+      <li><a href="#">Comets</a></li>
+    </ul>
+  </nav>
+</header>
 
 ---
 
   <img src="images/banner.svg">
 
-<p>The Solar System-our home in the stars</p>
+<figure>
+<figcaption>The Solar System-our home in the stars</figcaption>
+</figure>
 
 ---
 
