Fix tags on main and header

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
 </header>
 
 ---
-
+<header>
   <img src="images/banner.svg">
+</header>
 
 <figure>
 <figcaption>The Solar System-our home in the stars</figcaption>
 </figure>
 
 ---
-
+<main>
 <p>The Solar System is the gravitationally bond system comprising the Sun and the planetary system that orbits it.</p>
+</main>
