Fix some content in html file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-ca"></html>
+<html lang="en-ca">
   <head>
     <meta charset+"utf-8">
     <title>The Solar System</title>
@@ -38,3 +38,4 @@
 <main>
 <p>The Solar System is the gravitationally bond system comprising the Sun and the planetary system that orbits it.</p>
 </main>
+</html>
