--- a/index.html
+++ b/index.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-  <head>
-    <meta charset+"utf-8">
-    <title>The Solar System</title>
-    <body>
-        <img src="images/logo.svg">
+<head>
+  <meta charset+"utf-8">
+  <title>The Solar System</title>
+<body>
+
+    <img src="images/logo.svg" alt="Solar System logo">
   </head>
-    </body>
-<header>
-  <h1>The Solar System</h1>
-</header>
-
-<header>
-  <nav>
-    <ul>
-      <li><a href="#">Stars</a></li>
-      <li><a href="#">Terrestrial planets</a></li>
-      <li><a href="#">Gas giants</a></li>
-      <li><a href="#">Dwarf planets</a></li>
-      <li><a href="#">Asteroids</a></li>
-      <li><a href="#">Comets</a></li>
-    </ul>
-  </nav>
-</header>
-
----
 
   <header>
+    <h1>The Solar System</h1>
+  </header>
 
-<figure>
-<img src="images/banner.svg">
-<figcaption>The Solar System-our home in the stars</figcaption>
-</figure>
-</header>
----
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Stars</a></li>
+        <li><a href="#">Terrestrial planets</a></li>
+        <li><a href="#">Gas giants</a></li>
+        <li><a href="#">Dwarf planets</a></li>
+        <li><a href="#">Asteroids</a></li>
+        <li><a href="#">Comets</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<main>
-<p>The Solar System is the gravitationally bond system comprising the Sun and the planetary system that orbits it.</p>
-</main>
+  ---
+
+  <header>
+    <figure>
+      <img src="images/banner.svg" alt="Solar System banner">
+    <figcaption>The Solar System-our home in the stars</figcaption>
+    </figure>
+  </header>
+
+  ---
+
+  <main>
+    <p>The Solar System is the gravitationally bond system comprising the Sun and the planetary system that orbits it.</p>
+  </main>
+
+</body>
 </html>
