--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
-  <meta charset+"utf-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Solar System</title>
+
+</head>
+
 <body>
 
     <img src="images/logo.svg" alt="Solar System logo">
-  </head>
 
   <header>
     <h1>The Solar System</h1>
