--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en-ca">
 <head>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
   <title>The Solar System</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <body>
 
-    <img src="images/logo.svg" alt="Solar System logo">
+  <img src="images/logo.svg" alt="Solar System logo">
 
   <header>
     <h1>The Solar System</h1>
@@ -33,7 +34,7 @@
   <header>
     <figure>
       <img src="images/banner.svg" alt="Solar System banner">
-    <figcaption>The Solar System-our home in the stars</figcaption>
+      <figcaption>The Solar System-our home in the stars</figcaption>
     </figure>
   </header>
 
